@@ -1,3 +1,8 @@
+2007-01-17  Konstantin Triger <kostat@mainsoft.com>
+
+	* GridView.cs: don't force creating rows collection when SelectedIndex
+		changes; EnsureDatabound on select.
+
 2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* TreeNode.cs: fixed Bind, fixed Value updating
